--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/border"
+        android:background="@android:color/transparent"
         android:layout_marginTop="60dp"
         android:layout_marginLeft="44dp"
         android:layout_marginBottom="44dp"
